2008-04-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj: Added missing files.
	* Mono.Addins/ExtensionNode.cs: When subscribing the extension changed
	  event, fire it for existing nodes, but only fire for the new
	  handler.

2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TypeExtensionNode.cs: Added property for getting the type
	  of an extension node. Based on a patch by Brad Taylor.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Allow getting the startup path of the
	  registry.
	* Mono.Addins.Description/AddinDescription.cs: Improve error message.
	* Mono.Addins.Database/AddinDatabase.cs: Use the startup patch provided by
	  the registry, not the global one.

2008-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Minor fixes.
	* Mono.Addins/AddinLocalizer.cs: Ouch, format arguments of GetString should
	  have been objects, not strings.
	* Mono.Addins.Description/NodeTypeAttribute.cs,
	  Mono.Addins.Description/ExtensionNodeType.cs,
	  Mono.Addins.Description/ExtensionPoint.cs,
	  Mono.Addins.Description/ConditionTypeDescription.cs,
	  Mono.Addins.Description/ExtensionNodeSet.cs: Implemented CopyFrom.
	* Mono.Addins.Description/AddinDescription.cs: Set global domain to
	  manifests read from xml files.
	* Mono.Addins.Description/ExtensionNodeDescription.cs: Remove insertbefore
	  and insertafter attributes when set to an empty string.
	* Mono.Addins.Database/AddinScanner.cs: Set a domain for files parsed with
	  ScanSingleFile.
	* Mono.Addins.Database/DefaultAssemblyReflector.cs: Fix bug in
	  GetCustomAttribute.

2008-02-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Fix add-in scan issue. Avoid
	  updating the same add-in twice.

2008-02-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.mdp, Mono.Addins/NodeAttributeAttribute.cs,
	  Mono.Addins/TypeExtensionPointAttribute.cs,